# rustyrag

./: .gitignore  Cargo.toml  build.rs  docker-compose.yml  init.sql  readme.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: chat_completion.rs  config.rs  index.html  main.rs  model.rs  rag_client.rs
src/embedding-generator/: config.rs  main.rs
