[package]
name = "rustyrag"
version = "0.1.0"
edition = "2021"
author = "Dominik Winter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
axum = { version = "0.7.5", features = ["macros", "ws"] }
serde_json = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
ollama-rs = { version = "0.1.9", features = ["stream"] }
tokio-stream = "0.1.15"
fastembed = "3.5.0"
csv = "1.3.0"
ort = { version = "2.0.0-rc.0", features=["coreml"] }
postgres = "0.19.7"
pgvector = { version = "0.3", features = ["postgres"] }
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
tokio-postgres = "0.7.10"
anyhow = "1.0.83"
lazy_static = "1.4.0"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["metal"] }
candle-core = { git = "https://github.com/EricLBuehler/candle.git", version = "0.5.0", features = ["metal"] }
indexmap = "2.2.6"

[[bin]]
name = "embedding-generator"
path = "src/embedding-generator/main.rs"
